test_case/rust-lang_rust/43869_322320674.rs
rust
#![feature(conservative_impl_trait)]

fn g() -> impl Iterator<Item=u8> { //~ ERROR E0277
    loop {}
}

fn main() {}
